feat: Add Reshel points using coefficient tables.
This differs from the OpenPowerlifting implementation, which uses a
curve of best fit, but matches meet director expectation, since it's
what other meet software uses.

--- a/website/content-generator/releases.html
+++ b/website/content-generator/releases.html
@@ -23,6 +23,7 @@ keywords = "{{ i18n "releases.html-meta-keywords" }}"
       <li>Rack heights can be assigned during registration. Coded by Jared Klopper.</li>
       <li>The Flight page now shows each lifter's divisions. Coded by Jared Klopper.</li>
       <li>Empty lines are now allowed in imported registration CSV files. <a href="https://gitlab.com/openpowerlifting/openlifter/issues/303">(#303)</a>. Coded by César Pedraza.</li>
+      <li>Reshel points are now available using coefficient tables. Coded by Johan Frisk.</li>
       <li>Added Auto-Fill Rules for 365Strong.</li>
     <ul class="laundry-list">
     </ul>
