--- a/website/content-generator/releases.html
+++ b/website/content-generator/releases.html
@@ -19,6 +19,7 @@ keywords = "{{ i18n "releases.html-meta-keywords" }}"
       <li>Spreadsheet export now reports Bare and Sleeves instead of Raw. <a href="https://gitlab.com/openpowerlifting/openlifter/issues/289">(#289)</a>. Reported by Joel Hendershott.</li>
       <li>Spreadsheet export now includes Lot numbers if used. Reported by Jo Whiteley.</li>
       <li>Fixed a bug where certain lifters may be excluded from Masters rankings. Reported by Maureen Clary.</li>
+      <li>Fixed a bug where certain lifters may be excluded from Juniors rankings. Coded by James Wakefield.</li>
       <li>Rack heights can be assigned during registration. Coded by Jared Klopper.</li>
       <li>The Flight page now shows each lifter's divisions. Coded by Jared Klopper.</li>
       <li>Added Auto-Fill Rules for 365Strong.</li>
