--- a/website/content-generator/releases.html
+++ b/website/content-generator/releases.html
@@ -22,6 +22,7 @@ keywords = "{{ i18n "releases.html-meta-keywords" }}"
       <li>Fixed a bug where certain lifters may be excluded from Juniors rankings. Coded by James Wakefield.</li>
       <li>Rack heights can be assigned during registration. Coded by Jared Klopper.</li>
       <li>The Flight page now shows each lifter's divisions. Coded by Jared Klopper.</li>
+      <li>Empty lines are now allowed in imported registration CSV files. <a href="https://gitlab.com/openpowerlifting/openlifter/issues/303">(#303)</a>. Coded by César Pedraza.</li>
       <li>Added Auto-Fill Rules for 365Strong.</li>
     <ul class="laundry-list">
     </ul>
