website: Link to /releases/latest from the main page

--- a/website/content-generator/releases.html
+++ b/website/content-generator/releases.html
@@ -7,9 +7,9 @@ keywords = "{{ i18n "releases.html-meta-keywords" }}"
 <div class="row row-spacer">
 
   <div class="col-md-4">
-    <a class="release-button beta-button" href="https://beta.openlifter.com/releases/beta/">
+    <a class="release-button beta-button" href="/releases/latest/">
       <div class="release-version">
-        Run OpenLifter <span>Beta</span>
+        Run OpenLifter <span>1.4</span>
       </div>
     </a>
     <div class="release-date">{{ i18n "releases.in-development" }}</div>
